// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop HOC should display a text with a dark backdrop 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="c-iJuALO c-iJuALO-dsZDrf-color-dark c-iJuALO-fTgyiV-show-true"
    data-testid="backdrop-dark"
  />
  <div
    data-testid="focus-trap"
    style="outline: none;"
    tabindex="0"
  >
    <div>
      TEST
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backdrop HOC should display a text with a light backdrop 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="c-iJuALO c-iJuALO-kQAVZF-color-light c-iJuALO-fTgyiV-show-true"
    data-testid="backdrop-light"
  />
  <div
    data-testid="focus-trap"
    style="outline: none;"
    tabindex="0"
  >
    <div>
      TEST
    </div>
  </div>
</DocumentFragment>
`;
